# Seismic_Migration_PSPI

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
cmake/: FindMKL.cmake
cpp_src/: CMakeLists.txt  linalg.cpp
cpp_src/include/: linalg.hpp  types.hpp
examples/: CMakeLists.txt  example1.cpp
unittests/: CMakeLists.txt
